# material-qualification-demo

./: .gitignore  README.md  pyproject.toml
notebooks/: tungsten_simulator_walkthrough.ipynb
src/material_qualification_demo/: __init__.py  app.py  branding.py
src/material_qualification_demo/simulators/: __init__.py  base.py  tungsten.py
tests/: test_tungsten_simulator.py
